# Massab-Farooq

./: LICENSE  README.md  app.py  pyproject.toml
static/: styles.css
templates/: about.html  index.html
